# recondns

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  diff.md  diff_example.html  history.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/recondns/: bruteforce.py  cli.py  core.py  db.py  diffing.py  diffs.py  enrich.py  exporter.py  interactive.py  ip_enrich.py  recommendations.py  report_md.py  signatures.yaml  storage.py  utils.py  webscan.py
src/recondns/dns/: robust_resolver.py
src/recondns/sources/: passive.py
src/recondns_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_core.py  test_passive.py  test_takeover.py
wordlists/: common.txt
