[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recondns-cli"
version = "0.1.0"
description = "Mini tool: DNS + crt.sh aggregation + snapshot exporter — CLI for passive recon"
authors = [{name="Ton Nom", email="you@example.com"}]
dependencies = [
  "dnspython>=2.3.0",
  "requests>=2.28.0",
  "click>=8.1.0",
  "python-dateutil>=2.8.2"
]

[project.scripts]
recondns = "recondns.cli:main"
