[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recondns"            
version = "0.1.0"
description = "DNS + CT + takeover + history/diff"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8",
  "dnspython>=2.3",
  "requests>=2.31",
  "PyYAML>=6",
  "cachetools>=5.3.0",
]

[project.scripts]
recondns = "recondns.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
